--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: iso_countries
 description: A plugin to get list of ISO Countries from device OS.
 version: 1.0.0
-author:
-homepage:
+author: Anoop M
+homepage: https://github.com/anoop4real/flutter_iso_countries
+repository: https://github.com/anoop4real/flutter_iso_countries
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
