--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: iso_countries
 description: A plugin to get list of ISO Countries from device OS.
-version: 1.0.0
-author: Anoop M
+version: 1.0.1
+author: Anoop M <anoopm6@gmail.com>
 homepage: https://github.com/anoop4real/flutter_iso_countries
 repository: https://github.com/anoop4real/flutter_iso_countries
 
