--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: iso_countries
 description: A plugin for fetching ISOCountries data from device OS. Name of countries can be obtained in different languages.
 version: 1.0.3
-author: Anoop
+author: Anoop<anoopm6@gmail.com>
 homepage: https://github.com/anoop4real/flutter_iso_countries
 repository: https://github.com/anoop4real/flutter_iso_countries
 
