--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: com.anoop4real.iso_countries
-    pluginClass: IsoCountriesPlugin
-
+    platforms:
+      android:
+        package: com.anoop4real.iso_countries
+        pluginClass: IsoCountriesPlugin
+      ios:
+        pluginClass: IsoCountriesPlugin
